Fix styling problems with .column hN > a
Increase line-height to eliminate background overlap on multi-line headings, restore bottom border upon hover

--- a/headers.less
+++ b/headers.less
@@ -882,12 +882,16 @@ h4,
 h5,
 h6 {
 	.column & > a {
-		border-bottom: none;
+		@lHeight-temp: extract(@lHeight-array, @lHeight-933mx);
+
+		border-bottom: 1px solid transparent;
 		box-shadow: none;
-		.line-height(@lHeight-917mx);
+		.line-height(@lHeight-933mx);
+		line-height: ~"calc(@{lHeight-temp} + 1px)";
 		text-decoration: underline;
 
 		&:hover {
+			border-bottom: 1px solid @hex-crimson;
 			text-decoration: none;
 		}
 	}
